web-infras/parser/tests/fixtures/babel/es2015/class/extends-strict/output.txt
[SyntaxError]: Can not use with statement in strict mode (2,3)
2|  with ({});
 | ^
